[project]
name = "comfyui-zyd232-nodes"
description = "ComfyUI custom nodes including LLM text generation (vision & reasoning), image pixel comparison, and other nodes for quality-of-life improvements."
version = "0.2.3"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/zyd232/ComfyUI-zyd232-Nodes"

[tool.comfy]
PublisherId = "zyd232"
DisplayName = "ComfyUI-zyd232-Nodes"
Icon = ""
