[project]
name = "comfyui-zyd232-nodes"
description = "ComfyUI nodes including LLM text generation for any OpenAI compatible server (Preset management, hide API-key, clean VRAM, auto-unload), image pixel comparison, and other nodes for quality-of-life improvements."
version = "0.4.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/zyd232/ComfyUI-zyd232-Nodes"

[tool.comfy]
PublisherId = "zyd232"
DisplayName = "ComfyUI-zyd232-Nodes"
Icon = ""
